<!--
  ~ Copyright (c) 2015 by David Hardy. Licensed under the Apache License, Version 2.0.
  -->

<resources>
    <string name="app_name">Locust</string>
    <string name="placeholder">Placeholder</string>

    <string name="units">Units</string>
    <string name="resources">Resources</string>
    <string name="territory">Territory</string>

    <string name="food">Food</string>
    <string name="nymph">Nymph</string>
    <string name="hopper">Hopper</string>

    <string name="spawn_cost_title">Spawn Cost</string>
    <string name="unit_count">%1$d units</string>
    <string name="produce_multiplier">%1$d bonus multiplier</string>
    <string name="produce_total">%1$d %2$s per second</string>
    <string name="spawn_cost">%1$s per unit and a pupa</string>
    <string name="spawn_max">At max %1$d %2$s could be spawned</string>
    <string name="current_food">You have %1$d units of food</string>
    <string name="current_produce">You have %1$d units, producing %2$d %3$s per second</string>
    <string name="spawn">Spawn %1$s</string>
</resources>
