<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 by David Hardy. Licensed under the Apache License, Version 2.0.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="8dp"
              android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/red"
                android:contentDescription="@string/units"
                tools:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/units_title_text_size"
                android:textStyle="bold"
                tools:text="Nymph"/>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabSpawn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|right"
            tools:src="@mipmap/ic_launcher"
            app:backgroundTint="@color/red"
            app:elevation="6dp"/>

    </FrameLayout>

    <TextView
        android:id="@+id/textViewCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@mipmap/ic_launcher"
        android:gravity="center_vertical"
        android:text="@string/unit_count"
        android:textSize="@dimen/units_detail_text_size"/>

    <TextView
        android:id="@+id/textViewMultiplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@mipmap/ic_launcher"
        android:gravity="center_vertical"
        android:text="@string/produce_multiplier"
        android:textSize="@dimen/units_detail_text_size"/>

    <TextView
        android:id="@+id/textViewProduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@mipmap/ic_launcher"
        android:gravity="center_vertical"
        android:text="@string/produce_total"
        android:textSize="@dimen/units_detail_text_size"/>

</LinearLayout>
