<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 by David Hardy. Licensed under the Apache License, Version 2.0.
  -->

<RelativeLayout
    android:id="@+id/spawnRoot"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <TextView
        android:id="@+id/spawnTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginStart="@dimen/units_card_inside_padding"
        android:layout_marginTop="@dimen/units_card_inside_padding"
        android:text="@string/spawn_cost_title"
        android:textSize="@dimen/units_title_text_size"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spawnTitle"
        android:layout_gravity="start|top"
        android:drawableStart="@mipmap/ic_launcher"
        android:gravity="center_vertical"
        android:text="@string/spawn_cost"
        android:textSize="@dimen/units_detail_text_size"/>

    <TextView
        android:id="@+id/textViewMaxSpawn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewCost"
        android:layout_gravity="start|top"
        android:drawableStart="@mipmap/ic_launcher"
        android:gravity="center_vertical"
        android:text="@string/spawn_max"
        android:textSize="@dimen/units_detail_text_size"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSpawnOne"
        android:layout_width="@dimen/units_card_small_fab_size"
        android:layout_height="@dimen/units_card_small_fab_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/units_card_inside_padding"
        android:layout_marginStart="@dimen/units_card_first_small_fab_start_margin"
        android:src="@drawable/ic_plus_one"
        app:backgroundTint="@color/red"
        app:elevation="@dimen/units_card_fab_elevation"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSpawn50Percent"
        android:layout_width="@dimen/units_card_small_fab_size"
        android:layout_height="@dimen/units_card_small_fab_size"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/units_card_inside_padding"
        android:layout_marginStart="@dimen/units_card_other_small_fab_start_margin"
        android:layout_toEndOf="@id/fabSpawnOne"
        android:src="@drawable/ic_50_percent"
        app:backgroundTint="@color/red"
        app:elevation="@dimen/units_card_fab_elevation"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSpawn100Percent"
        android:layout_width="@dimen/units_card_small_fab_size"
        android:layout_height="@dimen/units_card_small_fab_size"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/units_card_inside_padding"
        android:layout_marginStart="@dimen/units_card_other_small_fab_start_margin"
        android:layout_toEndOf="@id/fabSpawn50Percent"
        android:src="@drawable/ic_100_percent"
        app:backgroundTint="@color/red"
        app:elevation="@dimen/units_card_fab_elevation"/>

</RelativeLayout>
